--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
 
     <p>Explore, Create, Discover.</p>
 
+    <div class="new-story">
+        <button>New Story+</button>
+    </div>
 </body>
 </html>
