--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <h1>Create New Blog+</h1>
     </a>
 
+    <div class="login">
+        <a href="">
+            <button>Login</button>
+        </a>
+        <a href="">
+            <button>Signup</button>
+        </a>
+    </div>
+
     <hr>
 
     <div class="search-box">
