--- a/web/login-signup.html
+++ b/web/login-signup.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <link rel="Short Icon" type="image/png" href="">
+    <link rel="stylesheet" href="login-signup.css">
+    <title>Login</title>
 <body>
-    <div class="email">
-        <input type="email" placeholder="Email">
+    <div class="center">
+        <h1>Login</h1>
+        <form method="post">
+            <div class="txt_field">
+                <input type="text" required>
+                <span></span>
+                <label>Username</label>
+            </div>
+            <div class="txt_field">
+                <input type="password" required>
+                <span></span>
+                <label>Password</label>
+            </div>
+            <div class="FP">Forgot Password?</div>
+            <input type="Submit" value="Login">
+            <div class="signup_link">
+                Not A Member? <a href="#">Create Account</a>
+            </div>
+        </form>
     </div>
 </body>
 </html>
