--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </a>
 
     <div class="login">
-        <a href="">
+        <a href="web/login.html">
             <button>Login</button>
         </a>
         <a href="">
