--- a/web/login.html
+++ b/web/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Short Icon" type="image/png" href="">
-    <link rel="stylesheet" href="login-signup.css">
+    <link rel="stylesheet" href="login.css">
     <title>Login</title>
 <body>
     <div class="center">
